Fixes and project rename

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -2,7 +2,7 @@
 
 <html>
   <head>
-    <title>File Transfer</title>
+    <title>Stupid Simple File Transfer - Share ID '{{{id}}}'</title>
   </head>
   <body>
     <h1>stupid simple file transfer</h1>
